syntax = "proto3";

enum ArticleType {
    SIMPLE = 1;
    DETAILED = 2;
}

message Article {
    string title = 1;
    ArticleType type = 2;
    optional string content = 3;
    repeated string tags = 4;

    oneof author {
        string nickname = 5;
        int32 user_id = 6;
    }

    map<string, int32> referrers = 10;
    repeated Comment comments = 11;
    UserDetail detail = 12;
}

message Comment {
    string author = 1;
    string content = 2;

    oneof something {
        string s1 = 3;
        ArticleType type = 4;
    }
}

message User {
    int32 user_id = 1;
    string name = 2;
    repeated int32 friends = 3;
    UserDetail detail = 4;
}

message UserDetail {
    string address = 1;
    SomeInner role = 2;
}

message SomeInner {
    string str = 1;
}